@@ -1,3 +1,8 @@
+2009-07-16  Joseph Myers  <joseph@codesourcery.com>
+
+	* tls.m4 (GCC_CHECK_TLS): Also test TLS in a shared library when
+	cross-compiling.
+
 2009-05-26  Rafael Avila de Espindola  <espindola@google.com>
 
 	* plugins.m4: New.
